force-app/main/default/objects/Account/fields/Max_Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Max_Expected_Revenue__c</fullName>
    <label>Max Expected Revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>