force-app/main/default/objects/Account/fields/Maximum_Expected_Revenue_form_an_Open_Op__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Expected_Revenue_form_an_Open_Op__c</fullName>
    <label>Maximum Expected Revenue form an Open Op</label>
    <summarizedField>Opportunity.ExpectedRevenue</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>