force-app/main/default/objects/Account/fields/Total_Amount_of_Closed_Lost_Opportunitie__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Closed_Lost_Opportunitie__c</fullName>
    <label>Total Amount of Closed Lost Opportunitie</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>