force-app/main/default/objects/Account/fields/Total_Opportunities_LOST__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunities_LOST__c</fullName>
    <label>Total Opportunities LOST –</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>