force-app/main/default/objects/Account/validationRules/AnnualRevenue.validationRule-meta.xml
<ValidationRule>
    <fullName>AnnualRevenue</fullName>
    <active>false</active>
    <errorConditionFormula>OR( AnnualRevenue &lt; 0 , AnnualRevenue &gt; 100000000000)</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Annual Revenue cannot exceed 100 billion</errorMessage>
</ValidationRule>